<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">login</string>
    <string name="pw">password</string>
    <string name="rb">RadioButton</string>
    <string name="cb">CheckBox</string>
    <string name="sw">What does this do?</string>
    <string name="sw_on">Switch is ON</string>
    <string name="sw_off">Switch is Off</string>
    <string name="dialog_message">Do you want to finish?</string>
    <string name="dialog_title">title</string>
    <string name="dialog_yes">Here is my response</string>
    <string name="dialog_no">Cancel</string>
    <string name="toast_alt1">ListItemsActivity passed: My information to share</string>
    <string name="toast_alt2">Returned to StartActivity.onActivityResult</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="BtnText2">Start Chat</string>
    <string name="LogMesStartChat">User clicked Start Chat</string>
    <string name="btnSend">Send</string>
    <string name="btnWeatherTxt">Weather Forecast</string>
    <string name="currTem">Current Temperature</string>
    <string name="minTem">Min Temperature</string>
    <string name="maxTem">Max Temperature</string>
    <string name="msgHea">MessageHear</string>
    <string name="MsgId">ID=</string>
    <string name="BtnDelMsg">Delete this message</string>
    <string name="title_activity_test_toolbar">TestToolbarActivity</string>
    <string name="BtnToolBar">Test Toolbar</string>
    <string name="LogMesStartToolbar">Start Toolbar</string>
    <string name="itemSelect1">Version 1.0, by Sae il Kim</string>
    <string name="pick_color">tab test</string>
    <string name="diaTitle">Do you want to go back?</string>

</resources>
